--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss-preset-env": "^7.8.2",
     "sass": "^1.56.0",
     "sass-loader": "^13.1.0",
+    "three": "^0.146.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
