--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "build": "NODE_ENV=production webpack",
     "build-dev": "webpack",
     "start": "webpack serve",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "deploy": "vercel --prod"
   },
   "homepage": "https://github.com/itzaur/Learn-WebGL-with-Three.js#readme",
   "devDependencies": {
@@ -12,21 +13,22 @@
     "babel-loader": "^9.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
+    "css-loader": "^6.7.2",
     "html-webpack-plugin": "^5.5.0",
     "lil-gui": "^0.17.0",
-    "mini-css-extract-plugin": "^2.6.1",
-    "postcss": "^8.4.18",
+    "mini-css-extract-plugin": "^2.7.0",
+    "postcss": "^8.4.19",
     "postcss-loader": "^7.0.1",
-    "postcss-preset-env": "^7.8.2",
-    "sass": "^1.56.0",
-    "sass-loader": "^13.1.0",
+    "postcss-preset-env": "^7.8.3",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "three": "^0.146.0",
-    "webpack": "^5.74.0",
+    "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "gsap": "^3.5.1"
+    "gsap": "^3.5.1",
+    "vercel": "^28.5.5"
   }
 }
