--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "cannon-es": "^0.15.1",
     "gsap": "^3.5.1",
     "vercel": "^28.5.5"
   }
