--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss-preset-env": "^7.8.3",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
+    "stats.js": "^0.17.0",
     "three": "^0.146.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
@@ -30,6 +31,7 @@
   "dependencies": {
     "cannon-es": "^0.15.1",
     "gsap": "^3.5.1",
+    "three-instanced-uniforms-mesh": "^0.47.0",
     "vercel": "^28.5.5"
   }
 }
